[package]
name    = "kiiyotop-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum               = { version = "0.7", features = ["macros"] }
tokio              = { version = "1",   features = ["full"] }
reqwest            = { version = "0.12", features = ["json"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
dotenvy            = "0.15"
tower-http         = { version = "0.5", features = ["cors"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding        = "2"
